fix code block wrapping to prevent horizontal scroll

--- a/assets/scss/_docsy.scss
+++ b/assets/scss/_docsy.scss
@@ -17,6 +17,12 @@
   }
 }
 
+// Code block wrapping
+.td-content pre > code {
+  word-break: break-word !important;
+  white-space: pre-wrap !important;
+}
+
 .td-page-meta__child {
   display: none !important;
 }
